# PresenceCV

./: README.md
backend/: README.md  main.py  pyproject.toml
backend/api/: routes.py
backend/api/v1/: api.py
backend/api/v1/endpoints/: chat.py  resume.py
backend/core/: config.py
backend/models/: Github.py  bootdev.py  chat.py  leetcode.py  resume.py
backend/output/: resume_20250727_105944_71d76d7f.docx  resume_20250727_115715_8e8ae1cd.docx  resume_20250727_120000_d9419ab1.docx  resume_20250727_122034_848a946f.docx  resume_20250727_122247_4237f968.docx  resume_20250727_123139_ad92dd8e.docx
backend/services/: boot_dev.py  chat_service.py  format_converter.py  github_scraper.py  leetcode_scraper.py  resume_generator.py
backend/test/: test_format_converter.py  test_resume.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/components/icons/: icons.tsx
frontend/src/components/ui/: FadeIn.tsx
frontend/src/components/ui/CTA/: CTA.tsx
frontend/src/components/ui/Footer/: Footer.tsx
frontend/src/components/ui/Forms/: SocialForm.tsx
frontend/src/components/ui/Hero/: Hero.tsx
frontend/src/components/ui/Nav/: NavBar.tsx
frontend/src/hooks/: useResumeGen.ts
frontend/src/routes/: Home.tsx  NotFound.tsx
frontend/src/services/: api.ts
frontend/src/types/: resume.ts  user.ts
frontend/src/utils/: validation.ts
